[gd_scene load_steps=8 format=3 uid="uid://bqsh8lrdxmljt"]

[ext_resource type="Script" path="res://AutoLoad/GlobalOverlay.gd" id="1_ym7ug"]
[ext_resource type="PackedScene" uid="uid://bf1fy8up8a6j2" path="res://UI/Buttons/PauseButton.tscn" id="2_e15vu"]
[ext_resource type="Script" path="res://UI/Lists/TemporaryLabelList.gd" id="4_bpooc"]

[sub_resource type="Animation" id="Animation_uq6fe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ForegroundOverlay/GlobalOverlayRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ForegroundOverlay/GlobalOverlayRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nu70r"]
resource_name = "overlayFadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ForegroundOverlay/GlobalOverlayRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ForegroundOverlay/GlobalOverlayRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_7c1si"]
resource_name = "overlayFadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ForegroundOverlay/GlobalOverlayRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ForegroundOverlay/GlobalOverlayRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k1gpf"]
_data = {
&"RESET": SubResource("Animation_uq6fe"),
&"overlayFadeIn": SubResource("Animation_nu70r"),
&"overlayFadeOut": SubResource("Animation_7c1si")
}

[node name="GlobalOverlay" type="Node"]
process_mode = 3
script = ExtResource("1_ym7ug")

[node name="ForegroundOverlay" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 100

[node name="GlobalOverlayRect" type="ColorRect" parent="ForegroundOverlay"]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.5, 0, 1, 0.501961)

[node name="PauseButton" parent="ForegroundOverlay" instance=ExtResource("2_e15vu")]
unique_name_in_owner = true
visible = false
offset_left = 8.0
offset_top = 8.0
offset_right = 32.0
offset_bottom = 32.0

[node name="LabelsList" type="VBoxContainer" parent="ForegroundOverlay"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 8.0
offset_right = 59.0
offset_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("4_bpooc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_k1gpf")
}
autoplay = "overlayFadeOut"

[node name="Sounds" type="Node" parent="."]
unique_name_in_owner = true
